--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "espress": "0.0.0",
     "express": "^4.17.1",
+    "react-router-dom": "^6.0.2",
     "unirest": "^0.6.0"
   }
 }
