--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "create-react-app-demo",
+  "name": "lth1092-project-2",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "proxy": "http://localhost:3001",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./server.js",
@@ -12,10 +11,28 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.24.2",
+    "nodemon": "^2.0.12"
+  },
   "dependencies": {
     "espress": "0.0.0",
     "express": "^4.17.1",
     "react-router-dom": "^6.0.2",
-    "unirest": "^0.6.0"
+    "unirest": "^0.6.0",
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "connect-redis": "^6.0.0",
+    "cookie-parser": "^1.4.5",
+    "csurf": "^1.11.0",
+    "express-session": "^1.17.2",
+    "helmet": "^4.6.0",
+    "mongoose": "^6.0.12",
+    "redis": "^3.1.2",
+    "serve-favicon": "^2.5.0",
+    "underscore": "^1.13.1"
   }
 }
